Sonarcloud improvements